fix stack on firefox

--- a/pkg/app/gen/app.css
+++ b/pkg/app/gen/app.css
@@ -237,5 +237,6 @@
 .goapp-stack {
   position: relative;
   display: flex;
+  width: -moz-fit-content;
   width: fit-content;
 }
